Set 'height: auto;' on all images to prevent distortion.

--- a/src/sass/base/global/_global.scss
+++ b/src/sass/base/global/_global.scss
@@ -43,4 +43,5 @@ button {
 
 img {
     max-width: 100%;
+    height: auto;
 }
